<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.banixc.fsc.fscroid.activity.AddStudentActivity">

    <EditText
        android:id="@+id/edit_add_student_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_add_student_id"
        android:inputType="number"/>
    <EditText
        android:id="@+id/edit_add_student_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_add_student_name"/>
    <Button
        android:id="@+id/edit_add_student_relation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_add_student_relation"/>
    <Button
        android:id="@+id/button_add_student_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm"/>
</LinearLayout>
