<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.banixc.fsc.fscroid.activity.SignUpActivity">

    <EditText
        android:digits="_0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIGKLMNOPQRSTUVWXYZ"
        android:maxLength="16"
        android:id="@+id/edit_signup_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:hint="@string/edit_signup_username_hint" />

    <EditText
        android:id="@+id/edit_signup_realname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:hint="@string/edit_signup_realname_hint" />

    <EditText
        android:id="@+id/edit_signup_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_signup_password_hint"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/edit_signup_doespassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_signup_doespassword_hint"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button_signup_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:text="@string/signup" />
</LinearLayout>
