<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_setting_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:padding="@dimen/activity_horizontal_margin"
        android:text="@string/text_setting_title"
        android:textSize="20sp"/>
    <EditText
        android:id="@+id/edit_setting_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_setting_title"
        android:hint="@string/edit_setting_address"/>

    <Button
        android:id="@+id/button_setting_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_setting_address"
        android:hint="@string/confirm"/>
    <TextView
        android:id="@+id/text_setting_addport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_setting_confirm"/>

</RelativeLayout>