<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.banixc.fsc.fscroid.activity.NewsDetailActivity">

    <TextView
        android:id="@+id/text_parent_detial_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:gravity="center_horizontal"
        android:text="@string/text_parent_detial_title"
        android:textSize="@dimen/text_detial_title_size" />

    <View
        android:id="@+id/divier_detial"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@+id/text_parent_detial_title"
        android:layout_marginBottom="@dimen/padding_news_detial"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/padding_news_detial"
        android:background="@android:color/black" />

    <android.support.v7.widget.CardView
        android:id="@+id/text_detail_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/button_parent_detial_pass"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/divier_detial"
        android:layout_margin="@dimen/padding_news_detial"
        android:fadeScrollbars="false"
        android:scrollbars="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text_parent_detial_parentid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_news_detial" />

            <TextView
                android:id="@+id/text_parent_detial_parentuaername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_parent_detial_parentid"
                android:padding="@dimen/padding_news_detial" />

            <TextView
                android:id="@+id/text_parent_detial_parentname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_parent_detial_parentuaername"
                android:layout_centerHorizontal="true"
                android:padding="@dimen/padding_news_detial"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_parent_detial_relation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_parent_detial_parentname"
                android:layout_alignParentEnd="true"
                android:padding="@dimen/padding_news_detial" />

            <TextView
                android:id="@+id/text_parent_detial_studentid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_parent_detial_relation"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:padding="@dimen/padding_news_detial"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:layout_margin="@dimen/margin_medium"
        android:id="@+id/button_parent_detial_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_parent_detial_notpass"
        android:text="@string/button_parent_detial_pass"
        app:bootstrapBrand="success"
        app:bootstrapSize="lg"
        app:buttonMode="regular"
        app:showOutline="false"
        app:roundedCorners="true"/>

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:layout_margin="@dimen/margin_medium"
        android:id="@+id/button_parent_detial_notpass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_parent_detial_abolish"
        android:text="@string/button_parent_detial_notpass"
        app:bootstrapBrand="danger"
        app:bootstrapSize="lg"
        app:buttonMode="regular"
        app:showOutline="false"
        app:roundedCorners="true"/>

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:layout_margin="@dimen/margin_medium"
        android:id="@+id/button_parent_detial_abolish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/button_parent_detial_abolish"
        app:bootstrapBrand="regular"
        app:bootstrapSize="lg"
        app:buttonMode="regular"
        app:showOutline="false"
        app:roundedCorners="true"/>

</RelativeLayout>
